# genpy

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release-ci.yaml
foobar/v1alpha1/: foobar_pb2.py
genpy/edge/v1alpha1/: edge_api_connect.py  edge_api_pb2.py  edge_api_pb2.pyi  edge_api_pb2_grpc.py
genpy/foobar/v1alpha1/: foobar_connect.py  foobar_pb2.py  foobar_pb2.pyi  foobar_pb2_grpc.py
