[project]
name = "vinea"
dynamic = ["version"]
description = "Python SDK for Vinea-dev"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "connect-python>=0.5.0",
    "grpcio>=1.76.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["genpy/"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
